Fixed responsiviness issue on small screen
Made image assets fluid and columns stack in small screen mode

--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,4 @@
 .masthead {
-    height: 100vh;
     min-height: 800px;
     background-image: url('assets/background.jpg');
     background-size: cover;
